...
import UIKit

class Utils
{
    static func getCarMakeArray() -> [String]
    {
        return ["Acura",
            "Audi",
            "AlfaRomeo",
            "Bentley",
            "BMW",
            "Bugatti",
            "Buick",
...
            "Tesla",
            "Toyota"]
    }
    
    static func getCarColorArray() -> [String]
    {
        return ["White",
            "Purple",
            "White Diamond Pearl",
            "Silver",
            "Red",
            "Black",
            "Grey",
...
