...
    {
        
        let alert = UIAlertController(title: title,
                                      message: "Are you sure you want to print the ticket?",
                                      preferredStyle: UIAlertControllerStyle.alert)
        
        let okAction = UIAlertAction(title: "Yes",
                                         style: .default, handler: { _ in
                                            let myTicket = ParkingTicket(self.cust.cEmailId!, self.txtVehicleNumber.text!, self.txtCarMake.text!, self.txtCarColor.text!, self.sebmentTime.titleForSegment(at: self.sebmentTime.selectedSegmentIndex)!, Date(), self.txtParkingLane.text!, self.txtParkingSpot.text!, self.txtPaymentMethod.text!, Utils.getPaymentRateArray()[self.sebmentTime.selectedSegmentI
                                            
                                            let _ = ParkingTicket.addParkingTicket(ticket: myTicket)
                                            
                                            let storyBoard:UIStoryboard = UIStoryboard(name: "Main", bundle: nil)
...
